--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
     <!-- Fontawaseome -->
     <script src="https://kit.fontawesome.com/7a11b778b4.js" crossorigin="anonymous"></script>
     
-    <title>Cryptoindex</title>
+    <title>Archidax</title>
 
     <script src="%PUBLIC_URL%/datafeeds/udf/dist/polyfills.js"></script>
 		<script src="%PUBLIC_URL%/datafeeds/udf/dist/bundle.js"></script>
