--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,9 @@
 		<script src="%PUBLIC_URL%/datafeeds/udf/dist/bundle.js"></script>
 		<script src="%PUBLIC_URL%/charting_library/charting_library.js"></script>
     <script src="https://cdn.zingchart.com/zingchart.min.js"></script>
-    <script type="text/javascript">
+
+    <!-- Help Desk Below -->
+    <!-- <script type="text/javascript">
       var _smartsupp = _smartsupp || {};
       _smartsupp.key = '551ead0645278d5908af98dc092a189c18d73451';
       
@@ -61,7 +63,8 @@
               c.type='text/javascript';c.charset='utf-8';c.async=true;
               c.src='https://www.smartsuppchat.com/loader.js?';s.parentNode.insertBefore(c,s);
       })(document);
-      </script>
+      </script> -->
+      
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
